Fix Issue 165: Profile results table can get too wide for console. dispatch onPanelActivate to all modules; control profile button with onPanelActivate
http://code.google.com/p/fbug/source/detail?r=754

--- a/extension/skin/classic/console.css
+++ b/extension/skin/classic/console.css
@@ -252,6 +252,12 @@
 
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
+.profileSizer {
+    width:100%;
+    overflow-x:auto;
+    overflow-y:noscroll;
+}
+
 .profileTable {
     border-bottom: 1px solid #D7D7D7;
     padding: 0 0 4px 0;
